# polkadot_auctions_contributions

./: .gitignore  Polkadex_blocks.json  index.js  jsconfig.json  main.py  package-lock.json  package.json  requirements.txt
auctions/: Cargo.toml  polkadot_metadata.scale
auctions/src/: main.rs
src/core/: crowdloan.mjs  fs.mjs
src/utils/: utils.mjs
