[package]
name = "auctions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = { git = "https://github.com/paritytech/subxt", branch = "master" }
tokio = { version = "1.18.0", features = ["full"] }
env_logger = "0.9.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ['derive'] }
futures = "0.3.21"
serde = { version = "1.0.136", optional = false, features = ["derive"] }
serde_json = { version = "1.0.79", optional = false }
